--- a/app/src/main/res/layout/verification_layout.xml
+++ b/app/src/main/res/layout/verification_layout.xml
@@ -56,21 +56,30 @@
         android:orientation="horizontal"
         android:layout_below="@+id/code_input_method"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25.5dp">
+        android:layout_marginTop="25.5dp"
+        >
 
         <Button
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:id="@+id/verification_email"
             android:background="@drawable/button_style2"
-            android:elevation="16dp"/>
+            android:elevation="16dp"
+            android:drawableStart="@drawable/email"
+            android:text="@string/email"
+            android:textAllCaps="false"
+
+            />
 
         <Button
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:id="@+id/verification_sms"
             android:layout_marginStart="15dp"
-            android:background="@drawable/button_style2"/>
+            android:background="@drawable/button_style2"
+            android:drawableStart="@drawable/sms"
+            android:text="@string/sms"
+            />
 
     </LinearLayout>
 
