--- a/app/src/main/res/layout/verification_layout.xml
+++ b/app/src/main/res/layout/verification_layout.xml
@@ -1,133 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageButton
+        android:id="@+id/back_btn5"
         android:layout_width="12.5dp"
         android:layout_height="22dp"
-        android:src="@drawable/back"
-        android:background="@color/bloomWhite"
-        android:id="@+id/back_btn5"
         android:layout_marginStart="9dp"
         android:layout_marginTop="9dp"
-        android:scaleType="fitCenter"/>
+        android:background="@color/bloomWhite"
+        android:scaleType="fitCenter"
+        android:src="@drawable/back" />
 
     <TextView
 
+        android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/forgot_password"
-        android:layout_marginTop="9.5dp"
         android:layout_marginStart="261dp"
+        android:layout_marginTop="9.5dp"
         android:text="Forgot Passwrd?"
         android:textColor="@color/colorBlack"
-        android:textSize="12sp"/>
+        android:textSize="12sp" />
 
     <TextView
 
+        android:id="@+id/verification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/verification"
         android:layout_below="@+id/back_btn5"
-        android:layout_marginTop="14dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="14dp"
         android:text="@string/verification"
         android:textColor="@color/colorBlack"
-        android:textSize="25sp"/>
+        android:textSize="25sp" />
 
     <TextView
 
+        android:id="@+id/code_input_method"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/code_input_method"
         android:layout_below="@+id/verification"
-        android:layout_marginTop="12dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="12dp"
         android:text="@string/choose_your_code_input_method"
         android:textColor="#9A9A9A"
-        android:textSize="15sp"/>
+        android:textSize="15sp" />
 
     <LinearLayout
+        android:id="@+id/linear_verification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/linear_verification"
-        android:orientation="horizontal"
         android:layout_below="@+id/code_input_method"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25.5dp"
-        >
+        android:orientation="horizontal">
 
         <Button
+            android:id="@+id/verification_email"
             android:layout_width="150dp"
             android:layout_height="100dp"
-            android:id="@+id/verification_email"
             android:background="@drawable/button_style2"
-            android:elevation="16dp"
             android:drawableStart="@drawable/email"
+            android:elevation="16dp"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
             android:text="@string/email"
             android:textAllCaps="false"
-
-            />
+            android:textSize="18sp" />
 
         <Button
+            android:id="@+id/verification_sms"
             android:layout_width="150dp"
             android:layout_height="100dp"
-            android:id="@+id/verification_sms"
             android:layout_marginStart="15dp"
             android:background="@drawable/button_style2"
             android:drawableStart="@drawable/sms"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
             android:text="@string/sms"
-            />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
     <EditText
+        android:id="@+id/code_input"
         android:layout_width="315dp"
         android:layout_height="wrap_content"
-        android:id="@+id/code_input"
-        android:text="@string/code"
         android:layout_below="@id/linear_verification"
-        android:layout_marginTop="25dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="30dp"
-        android:textSize="15sp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_marginTop="25dp"
+        android:text="@string/code"
+        android:textSize="15sp" />
 
 
     <Button
+        android:id="@+id/button_next"
         android:layout_width="315dp"
         android:layout_height="50dp"
-        android:id="@+id/button_next"
         android:layout_below="@+id/code_input"
-        android:layout_marginTop="45.5dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="45.5dp"
+        android:background="@drawable/button_style"
         android:text="@string/next"
-        android:textAllCaps="false"
-        android:background="@drawable/button_style"/>
+        android:textAllCaps="false" />
 
     <TextView
+        android:id="@+id/resend_code_link"
         android:layout_width="170dp"
         android:layout_height="28.5dp"
-        android:id="@+id/resend_code_link"
-        android:text="dsfsdfsfsdfsdfsdfsfsfsfsdfsdfsdfsfsfsfsdfsfsf"
         android:layout_below="@id/button_next"
-        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:textSize="12sp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:textColor="@color/colorBlack"/>
+        android:text="If you haven’t received the e-mail click Resend code"
+        android:textColor="@color/colorBlack"
+        android:textSize="12sp" />
 
     <TextView
-        android:layout_width="167dp"
-        android:layout_height="14dp"
         android:id="@+id/verification_login_link"
-        android:text="dsfsdfsfsdfsdfsdfsfsfsfsdfsdfsdfsfsfsfsdfsfsf"
+        android:layout_width="168dp"
+        android:layout_height="14dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="44.5dp"
-        android:textSize="12sp"
         android:gravity="center"
-        android:textColor="@color/colorBlack"/>
+        android:text="Already have an account? Login"
+        android:textColor="@color/colorBlack"
+        android:textSize="12sp" />
 
 </RelativeLayout>
