--- a/app/src/main/res/drawable/button_style2.xml
+++ b/app/src/main/res/drawable/button_style2.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<item>
+    <layer-list>
+        <!-- SHADOW LAYER -->
+        <item android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="1dp">
+            <shape>
+                <solid android:color="#19444444" />
+                <corners android:bottomLeftRadius="18dp"
+                    android:bottomRightRadius="18dp"
+                    android:topLeftRadius="18dp"
+                    android:topRightRadius="18dp"
+                    />
+            </shape>
+        </item>
 
-    <gradient
-        android:endColor="#FFFFFF"
-        android:startColor="@color/bloomWhite"
-        android:useLevel="false" />
+        <!-- CONTENT LAYER -->
+        <item android:right="6dp" android:bottom="6dp" android:left="6dp" android:top="3dp">
+            <shape android:shape="rectangle">
 
-    <corners android:bottomLeftRadius="18dp"
-        android:bottomRightRadius="18dp"
-        android:topLeftRadius="18dp"
-        android:topRightRadius="18dp"
-        />
+                <corners android:bottomLeftRadius="18dp"
+                    android:bottomRightRadius="18dp"
+                    android:topLeftRadius="18dp"
+                    android:topRightRadius="18dp"
+                    />
 
-    <solid android:color="#FFFFFF" />
-</shape>
+                <solid android:color="#FFFFFF" />
+
+
+            </shape>
+        </item>
+    </layer-list>
+</item>
+</selector>
