--- a/app/src/main/res/layout/signup_to_work_layout.xml
+++ b/app/src/main/res/layout/signup_to_work_layout.xml
@@ -66,7 +66,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/hint_phone_number"
             android:textSize="15sp"
-            android:textCursorDrawable="@color/colorBlack"/>
+            android:textCursorDrawable="@color/colorBlack"
+            android:inputType="phone"/>
 
 
     </android.support.design.widget.TextInputLayout>
@@ -104,7 +105,8 @@
         android:textColor="@color/colorBlack"
         android:textAllCaps="false"
         android:background="@drawable/button_style"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:stateListAnimator="@null"/>
 
     <TextView
         android:layout_width="190dp"
