--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/bloomBackground</item>
         <item name="colorPrimaryDark">@color/bloomBackground</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/bloomBackground</item>
     </style>
 
     <style name="HintText" parent="TextAppearance.Design.Hint">
