--- a/app/src/main/res/layout/verification_layout.xml
+++ b/app/src/main/res/layout/verification_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bloomWhite">
 
     <ImageButton
@@ -63,26 +64,53 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/verification_email"
+
+        <android.support.v7.widget.CardView
             android:layout_width="144dp"
             android:layout_height="96dp"
-            android:background="@drawable/button_style2"
-            android:drawableStart="@drawable/email"
-            android:lineSpacingExtra="-1.872sp"
-            android:text="@string/email"
-            android:textAllCaps="false"
-            android:textSize="17.3sp" />
+            app:cardCornerRadius="18dp"
+            android:elevation="25dp">
+
+            <ImageView
+                android:id="@+id/emailpic"
+                android:layout_width="48dp"
+                android:layout_height="34.1dp"
+                android:src="@drawable/email"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20.2dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                />
+
+            <TextView
+                android:id="@+id/emailtxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email"
+                android:textSize="17.3sp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/colorBlack"
+                android:layout_marginStart="80dp"
+                />
+
+
+        </android.support.v7.widget.CardView>
+
+
 
         <Button
             android:id="@+id/verification_sms"
-            android:layout_width="wrap_content"
+            android:layout_width="144dp"
             android:layout_height="96dp"
             android:layout_marginStart="21.6dp"
             android:background="@drawable/button_style2"
             android:lineSpacingExtra="-1.872sp"
             android:text="@string/sms"
-            android:textSize="17.3sp" />
+            android:textSize="17.3sp"
+            android:drawableStart="@drawable/sms"
+
+            />
+
+
 
     </LinearLayout>
 
