--- a/app/src/main/res/layout/layout_personal_information.xml
+++ b/app/src/main/res/layout/layout_personal_information.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bloomWhite">
+    android:background="@color/bloomWhite"
+    android:id="@+id/personal_information_main">
 
     <ImageButton
         android:layout_width="12.5dp"
@@ -136,7 +137,7 @@
         android:text="@string/finish"
         android:textColor="@color/colorBlack"
         android:textAllCaps="false"
-        android:background="@drawable/button_style"
+        android:background="@drawable/button_style3"
         android:textSize="18sp"/>
 
 
