--- a/app/src/main/res/layout/layout_signup_fragment.xml
+++ b/app/src/main/res/layout/layout_signup_fragment.xml
@@ -104,7 +104,7 @@
         android:text="@string/create_account"
         android:textColor="@color/colorBlack"
         android:textAllCaps="false"
-        android:background="@drawable/button_style"
+        android:background="@drawable/button_style3"
         android:textSize="18sp"
         android:stateListAnimator="@null"/>
 
@@ -118,36 +118,16 @@
         android:textColor="@color/colorBlack"
         android:textAlignment="center"
         android:textSize="12sp"/>
-    <LinearLayout
+
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:id="@+id/signup_login_link"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/colorBlack"
+        android:textSize="12sp"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/signup_acount_availibility"
-            android:text="@string/already_have_an_account"
-            android:textColor="@color/colorBlack"
-            android:layout_marginBottom="45dp"
-            android:textSize="12sp"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/signup_login_link"
-            android:text="@string/login"
-            android:textColor="@color/colorBlack"
-            android:layout_marginStart="2dp"
-            android:textSize="12sp"
-            />
-
-    </LinearLayout>
-
-
-
+        />
 </RelativeLayout>
