--- a/app/src/main/res/layout/layout_verification_fragment.xml
+++ b/app/src/main/res/layout/layout_verification_fragment.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bloomWhite">
+    android:background="@color/bloomWhite"
+    android:id="@+id/verification_main">
 
     <ImageButton
         android:id="@+id/back_btn5"
@@ -57,22 +58,29 @@
     <LinearLayout
         android:id="@+id/linear_verification"
         android:layout_width="315dp"
-        android:layout_height="100dp"
+        android:layout_height="104dp"
         android:layout_below="@+id/code_input_method"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24.5dp"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:orientation="horizontal">
 
 
         <android.support.v7.widget.CardView
+
             android:layout_width="144dp"
             android:layout_height="96dp"
             app:cardCornerRadius="18dp"
-            android:elevation="25dp">
+            android:elevation="25dp"
+            android:id="@+id/card_email"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardElevation="4dp"
+            >
 
             <ImageView
-                android:id="@+id/emailpic"
+                android:id="@+id/email_pic"
                 android:layout_width="48dp"
                 android:layout_height="34.1dp"
                 android:src="@drawable/email"
@@ -82,7 +90,7 @@
                 />
 
             <TextView
-                android:id="@+id/emailtxt"
+                android:id="@+id/email_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/email"
@@ -92,25 +100,42 @@
                 android:layout_marginStart="80dp"
                 />
 
-
         </android.support.v7.widget.CardView>
 
-
-
-        <Button
-            android:id="@+id/verification_sms"
+        <android.support.v7.widget.CardView
             android:layout_width="144dp"
             android:layout_height="96dp"
+            app:cardCornerRadius="18dp"
+            android:elevation="25dp"
             android:layout_marginStart="21.6dp"
-            android:background="@drawable/button_style2"
-            android:lineSpacingExtra="-1.872sp"
-            android:text="@string/sms"
-            android:textSize="17.3sp"
-            android:drawableStart="@drawable/sms"
-
-            />
+            android:id="@+id/card_sms"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardElevation="4dp">
 
 
+            <ImageView
+                android:id="@+id/sms_pic"
+                android:layout_width="31.3dp"
+                android:layout_height="48dp"
+                android:src="@drawable/sms"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20.2dp"
+
+                />
+
+            <TextView
+                android:id="@+id/sms_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sms"
+                android:textSize="17.3sp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/colorBlack"
+                android:layout_marginStart="80dp"
+                />
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
@@ -128,8 +153,6 @@
         android:backgroundTint="@color/colorBlack"
         android:textColorHint="@color/colorBlack"
         android:textColorHighlight="@color/colorBlack"
-
-
         />
 
 
@@ -140,12 +163,13 @@
         android:layout_below="@+id/code_input"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:background="@drawable/button_style"
+        android:background="@drawable/button_style3"
         android:text="@string/next"
         android:textSize="17.3sp"
         android:lineSpacingExtra="-1.872sp"
         android:textAllCaps="false"
-        android:stateListAnimator="@null"/>
+        android:stateListAnimator="@null"
+        android:foreground="?android:attr/selectableItemBackground"/>
 
     <TextView
         android:id="@+id/resend_code_link"
