--- a/app/src/main/res/layout/layout_account_type_fragment.xml
+++ b/app/src/main/res/layout/layout_account_type_fragment.xml
@@ -10,14 +10,14 @@
         android:id="@+id/account_type_back_btn"
         android:layout_width="12.5dp"
         android:layout_height="21.6dp"
-        android:layout_marginStart="8.64dp"
-        android:layout_marginTop="29.8dp"
+        android:layout_marginStart="10.5dp"
+        android:layout_marginTop="30.24dp"
         android:background="@color/bloomWhite"
         android:scaleType="fitCenter"
         android:src="@drawable/back" />
 
     <TextView
-        android:id="@+id/account_type_txt"
+        android:id="@+id/account_type_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28.3dp"
@@ -29,12 +29,12 @@
 
     <TextView
 
-        android:id="@+id/account_type_warning_txt"
+        android:id="@+id/account_type_sub_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/account_type_txt"
+        android:layout_below="@+id/account_type_title"
         android:layout_marginStart="28.8dp"
-        android:layout_marginTop="11.5dp"
+        android:layout_marginTop="7.632dp"
         android:text="@string/selected_type_is_not_to_be_changed"
         android:textColor="@color/colorGrey"
         android:textSize="14.4sp" />
@@ -42,7 +42,7 @@
     <LinearLayout
         android:id="@+id/linear_verification"
         android:layout_width="304dp"
-        android:layout_height="272dp"
+        android:layout_height="274dp"
         android:layout_marginTop="190dp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
@@ -59,27 +59,38 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
+            app:cardElevation="3dp"
             >
 
-            <ImageView
-                android:id="@+id/account_type_hire_pic"
-                android:layout_width="75.3dp"
-                android:layout_height="50.8dp"
-                android:src="@drawable/hire"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="20.2dp"
-                />
-
-            <TextView
-                android:id="@+id/account_type_hire_txt"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/hire"
-                android:textSize="17.3sp"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/colorBlack"
-                android:layout_marginStart="180dp"
-                />
+                android:id="@+id/account_type_hire_linear"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/account_type_hire_pic"
+                    android:layout_width="75.3dp"
+                    android:layout_height="50.8dp"
+                    android:src="@drawable/hire"
+                    />
+
+                <TextView
+                    android:id="@+id/account_type_hire_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/hire"
+                    android:textSize="17.3sp"
+                    android:textColor="@color/colorBlack"
+                    android:layout_marginStart="14.4dp"
+                    />
+
+
+            </LinearLayout>
+
+
 
         </android.support.v7.widget.CardView>
 
@@ -92,39 +103,49 @@
             android:id="@+id/account_type_work_card"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            app:cardElevation="3dp">
 
-            <ImageView
-                android:id="@+id/account_type_work_pic"
-                android:layout_width="75.3dp"
-                android:layout_height="50.8dp"
-                android:src="@drawable/work"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="20.2dp"
-
-                />
-
-            <TextView
-                android:id="@+id/account_type_work_txt"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/work"
-                android:textSize="17.3sp"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/colorBlack"
-                android:layout_marginStart="180dp"
-                />
+                android:id="@+id/account_type_work_linear"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/account_type_work_pic"
+                    android:layout_width="75.3dp"
+                    android:layout_height="50.8dp"
+                    android:src="@drawable/work"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="20.2dp"
+                    />
+
+                <TextView
+                    android:id="@+id/account_type_work_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/work"
+                    android:textSize="17.3sp"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/colorBlack"
+                    android:layout_marginStart="14.4dp"
+                    />
+            </LinearLayout>
+
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/acount_type_login_txt"
+        android:id="@+id/acount_type_login_link"
         android:layout_width="168dp"
         android:layout_height="17dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42.7dp"
+        android:layout_marginBottom="43.2dp"
         android:gravity="center_horizontal"
         android:textColor="@color/colorBlack"
         android:textSize="11.5sp" />
