--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,10 @@
     android:background="@color/bloomBackground"
     android:id="@+id/main_activity">
 
-
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main_frame">
+    </FrameLayout>
 
 </RelativeLayout>
