--- a/app/src/main/res/layout/layout_skip_fragment.xml
+++ b/app/src/main/res/layout/layout_skip_fragment.xml
@@ -68,19 +68,22 @@
         android:gravity="center"
         android:background="@drawable/button_style"
         android:text="@string/skip"
+        android:textSize="17.3sp"
         android:textAllCaps="false"
-        android:textColor="@color/bloomWhite" />
+        android:textColor="@color/bloomWhite"
+        android:stateListAnimator="@null"/>
 
 
     <TextView
-        android:id="@+id/skip_txt3"
+        android:id="@+id/skip_login_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/bloomWhite"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="43.2dp"
         android:layout_centerHorizontal="true"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textSize="11.5sp"/>
 
 
 </RelativeLayout>
