--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,9 +9,11 @@
     </style>
 
     <style name="HintText" parent="TextAppearance.Design.Hint">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">14.4sp</item>
         <item name="android:textColorHint">@color/colorBlack</item>
         <item name="colorControlActivated">@color/colorBlack</item>
+        <item name="android:textCursorDrawable">@color/colorBlack</item>
+
     </style>
 
 
