--- a/app/src/main/res/layout/layout_personal_information_fragment.xml
+++ b/app/src/main/res/layout/layout_personal_information_fragment.xml
@@ -8,138 +8,112 @@
 
     <ImageButton
         android:layout_width="12.5dp"
-        android:layout_height="22dp"
+        android:layout_height="21.6dp"
         android:src="@drawable/back"
         android:background="@color/bloomWhite"
-        android:id="@+id/back_btn4"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="9dp"
+        android:id="@+id/personal_information_back_btn"
+        android:layout_marginStart="10.5dp"
+        android:layout_marginTop="30.24dp"
         android:scaleType="fitCenter"/>
 
-
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/personal_information"
-        android:layout_below="@+id/back_btn4"
-        android:layout_marginTop="14dp"
-        android:layout_marginStart="30dp"
+        android:id="@+id/personal_information_title"
+        android:layout_marginStart="28.3dp"
+        android:layout_marginTop="65.232dp"
         android:text="@string/personal_information"
-        android:textColor="@color/bloomBackground"
-        android:textSize="25sp"/>
-
+        android:textColor="@color/colorBlack"
+        android:textSize="24sp"/>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:id="@+id/first_name"
-        android:layout_below="@+id/personal_information"
-        android:layout_marginTop="10dp"
+        android:id="@+id/personal_information_first_name"
+        android:layout_marginTop="110.448dp"
         android:layout_centerHorizontal="true"
         android:theme="@style/HintText"
         >
-
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/first_name_input"
+            android:id="@+id/personal_information_first_name_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/first_name"
-            android:textSize="15sp"
-            android:textCursorDrawable="@color/colorBlack"/>
-
-
+            android:textSize="15sp"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:id="@+id/last_name"
-        android:layout_below="@+id/first_name"
-        android:layout_marginTop="10dp"
+        android:id="@+id/personal_information_last_name"
+        android:layout_below="@+id/personal_information_first_name"
+        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         android:theme="@style/HintText"
         >
-
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/last_name_input"
+            android:id="@+id/personal_information_last_name_input"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="@string/last_name"
-            android:textSize="15sp"
-            android:textCursorDrawable="@color/colorBlack"/>
-
-
+            android:textSize="15sp"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:id="@+id/country"
-        android:layout_below="@+id/last_name"
-        android:layout_marginTop="10dp"
+        android:id="@+id/personal_information_country"
+        android:layout_below="@+id/personal_information_last_name"
+        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         android:theme="@style/HintText"
         >
-
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/country_input"
+            android:id="@+id/personal_information_country_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/country"
-            android:inputType="textPassword"
-            android:textSize="15sp"
-            android:textCursorDrawable="@color/colorBlack" />
-
-
+            android:textSize="15sp"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:id="@+id/city"
-        android:layout_below="@+id/country"
-        android:layout_marginTop="10dp"
+        android:id="@+id/personal_information_city"
+        android:layout_below="@+id/personal_information_country"
+        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         android:theme="@style/HintText"
         >
-
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/city_input"
+            android:id="@+id/personal_information_city_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/city"
-            android:inputType="textPassword"
-            android:textSize="15sp"
-            android:textCursorDrawable="@color/colorBlack" />
-
-
+            android:textSize="15sp"/>
     </android.support.design.widget.TextInputLayout>
 
     <Spinner
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:id="@+id/gmt_choice"
-        android:layout_below="@+id/city"
-        android:layout_marginTop="10dp"
+        android:id="@+id/personal_information_spinner"
+        android:layout_below="@+id/personal_information_city"
+        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
-        android:theme="@style/HintText">
-
-    </Spinner>
+        android:theme="@style/HintText"/>
 
     <Button
         android:layout_width="315dp"
         android:layout_height="50dp"
-        android:id="@+id/finish_btn"
-        android:layout_below="@+id/gmt_choice"
+        android:id="@+id/personal_information_finish_btn"
+        android:layout_below="@+id/personal_information_spinner"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="28.8dp"
         android:text="@string/finish"
         android:textColor="@color/colorBlack"
         android:textAllCaps="false"
-        android:background="@drawable/button_style3"
+        android:background="@drawable/button_style_white"
         android:textSize="18sp"
         android:stateListAnimator="@null"/>
-
 
 </RelativeLayout>
