--- a/app/src/main/res/layout/layout_signup_fragment.xml
+++ b/app/src/main/res/layout/layout_signup_fragment.xml
@@ -22,7 +22,7 @@
         android:layout_marginStart="28.3dp"
         android:layout_marginTop="65.232dp"
         android:text="@string/sign_up_to_work"
-        android:textColor="@color/bloomBackground"
+        android:textColor="@color/colorBlack"
         android:textSize="24sp"/>
 
     <android.support.design.widget.TextInputLayout
@@ -82,7 +82,7 @@
         android:text="@string/create_account"
         android:textColor="@color/colorBlack"
         android:textAllCaps="false"
-        android:background="@drawable/button_style3"
+        android:background="@drawable/button_style_white"
         android:textSize="17.3sp"
         android:stateListAnimator="@null"/>
 
