--- a/app/src/main/res/layout/layout_skip_fragment.xml
+++ b/app/src/main/res/layout/layout_skip_fragment.xml
@@ -66,7 +66,7 @@
         android:layout_marginBottom="73.9dp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:background="@drawable/button_style"
+        android:background="@drawable/button_style_pink"
         android:text="@string/skip"
         android:textSize="17.3sp"
         android:textAllCaps="false"
